--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 torch-summary==1.4.2
-torch==1.6.0+cu101
-torchvision==0.7.0+cu101
+torch==1.6.0
+torchvision==0.7.0
 torchtext==0.7.0
 transformers==3.1.0
 scikit-learn==0.22.1
